<resources>
    <string name="app_name">Phone2</string>
    <string name="action_settings">Settings</string>
    <string name="notely">Notely</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="last_updated">Last updated</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="day_before_yesterday">Day before yesterday</string>
    <string name="dau_after_tomorrow">Day after tomorrow</string>
    <string name="hearted">Hearted</string>
    <string name="starred">Starred</string>
    <string name="poem">Poem</string>
    <string name="story">Story</string>
    <string name="filter">Filter</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
</resources>
