<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/hearted"
            android:actionMenuTextColor="@color/white"
            android:checked="false"
            android:icon="@drawable/heart_icon"
            android:title="@string/hearted"
            app:actionLayout="@layout/widget_check" />
        <item
            android:id="@+id/favorite"
            android:actionMenuTextColor="@color/white"
            android:checked="false"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/starred"
            app:actionLayout="@layout/widget_check" />
        <item
            android:id="@+id/poem"
            android:actionMenuTextColor="@color/white"
            android:checked="false"
            android:title="@string/poem"
            app:actionLayout="@layout/widget_check" />
        <item
            android:id="@+id/story"
            android:actionMenuTextColor="@color/white"
            android:checked="false"
            android:title="@string/story"
            app:actionLayout="@layout/widget_check" />
    </group>
</menu>