<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <EditText
        android:id="@+id/message_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="6dp"
        android:hint="@string/notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:onClick="onBackButtonClick"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <TextView
            android:id="@+id/edit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/back_button"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/back_button"
            android:layout_marginRight="20dp"
            android:onClick="onEditButtonClick"
            android:text="@string/edit" />

        <Space
            android:id="@+id/space"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/back_button"
            android:layout_alignTop="@+id/back_button"
            android:layout_toLeftOf="@+id/edit_tv" />

        <TextView
            android:id="@+id/save_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/back_button"
            android:layout_alignTop="@+id/back_button"
            android:layout_toLeftOf="@+id/space"
            android:onClick="onSaveButtonClick"
            android:text="@string/save"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/back_button"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/back_button"
            android:hint="@string/title"
            android:text="" />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/title_tv"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/back_button"
            android:text="01-02-2018" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>